@@ -243,6 +243,8 @@
 @slsh/lib/rline/vikeys.sl
 @slsh/lib/rline/complete.sl
 @slsh/lib/rline/slrline.rc
+@slsh/lib/rline/histedit.sl
+@slsh/lib/rline/histsrch.sl
 
 @slsh/lib/help/arrayfuns.hlp
 @slsh/lib/help/glob.hlp
